fixing contrast color text

--- a/skins/frontend/master/src/less/wpca/variables/colors.less
+++ b/skins/frontend/master/src/less/wpca/variables/colors.less
@@ -132,11 +132,11 @@
  * ------------------------------------------------- */
 .cuar-set-defaults-palette(@cuar-from-color: @cuar-color-neutral) when (@cuar-dark-scheme=false) {
   @cuar-color-contrast: @palette-Black-500;
-  @cuar-color-contrast-text: @palette-Black-Text;
-  @cuar-color-contrast-secondary-text: @palette-Black-Secondary-Text;
-  @cuar-color-contrast-icons: @palette-Black-Icons;
+  @cuar-color-contrast-text: @palette-White-Text;
+  @cuar-color-contrast-secondary-text: @palette-White-Secondary-Text;
+  @cuar-color-contrast-icons: @palette-White-Icons;
   @cuar-color-contrast-disabled: @palette-Black-Disabled;
-  @cuar-color-contrast-hint-text: @palette-Black-Hint-Text;
+  @cuar-color-contrast-hint-text: @palette-White-Hint-Text;
   @cuar-color-contrast-dividers: @palette-Black-Dividers;
 
   @cuar-color-overlay: rgba(0, 0, 0, 0.3);
@@ -144,11 +144,11 @@
 
 .cuar-set-defaults-palette(@cuar-from-color: @cuar-color-neutral) when (@cuar-dark-scheme=true) {
   @cuar-color-contrast: @palette-White-500;
-  @cuar-color-contrast-text: @palette-White-Text;
-  @cuar-color-contrast-secondary-text: @palette-White-Secondary-Text;
-  @cuar-color-contrast-icons: @palette-White-Icons;
+  @cuar-color-contrast-text: @palette-Black-Text;
+  @cuar-color-contrast-secondary-text: @palette-Black-Secondary-Text;
+  @cuar-color-contrast-icons: @palette-Black-Icons;
   @cuar-color-contrast-disabled: @palette-White-Disabled;
-  @cuar-color-contrast-hint-text: @palette-White-Hint-Text;
+  @cuar-color-contrast-hint-text: @palette-Black-Hint-Text;
   @cuar-color-contrast-dividers: @palette-White-Dividers;
 
   @cuar-color-overlay: rgba(255, 255, 255, 0.5);
@@ -326,11 +326,11 @@ Since the parser actually only works for default master skin, manually add varia
 @cuar-color-neutral-darker: @cuar-color-neutral-90;
 
 @cuar-color-contrast: @palette-Black-500;
-@cuar-color-contrast-text: @palette-Black-Text;
-@cuar-color-contrast-secondary-text: @palette-Black-Secondary-Text;
-@cuar-color-contrast-icons: @palette-Black-Icons;
+@cuar-color-contrast-text: @palette-White-Text;
+@cuar-color-contrast-secondary-text: @palette-White-Secondary-Text;
+@cuar-color-contrast-icons: @palette-White-Icons;
 @cuar-color-contrast-disabled: @palette-Black-Disabled;
-@cuar-color-contrast-hint-text: @palette-Black-Hint-Text;
+@cuar-color-contrast-hint-text: @palette-White-Hint-Text;
 @cuar-color-contrast-dividers: @palette-Black-Dividers;
 @cuar-color-overlay: rgba(0, 0, 0, 0.3);
 */
